New Image Directory

--- a/Projeto_IRock/Index.html
+++ b/Projeto_IRock/Index.html
@@ -15,7 +15,7 @@
         <p>IRock - A pedra</p>
     </header>
     <div id="main">
-        <img id="iRock" src="C:\Users\lucas.couto\Documents\Projects\Aulas-Web\HTML_JS\Projeto_IRock\Imagem\irock_normal.png"> </div>
+        <img id="iRock" src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Projeto_IRock\Imagem\irock_normal.png"> </div>
 
 </body>
 
