Correction in img link

--- a/Projeto_IRock/Index.html
+++ b/Projeto_IRock/Index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IRock - A Pedra Interativa!</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -15,8 +15,7 @@
         <p>IRock - A pedra</p>
     </header>
     <div id="main">
-        <img id="iRock" src="\Imagem\irock_normal.png" , onclick="touckRock();"> </div>
-
+        <img id="iRock" alt="Irock imagem" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock_normal.png", onclick="touchRock();" />
 </body>
 
 
