--- a/Projeto_IRock/Index.html
+++ b/Projeto_IRock/Index.html
@@ -15,7 +15,8 @@
         <p>IRock - A pedra</p>
     </header>
     <div id="main">
-        <img id="iRock" alt="Irock imagem" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock_normal.png", onclick="touchRock();" />
+        <img id="iRock"  alt="Irock imagem" style="cursor:pointer" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png", onclick="touchRock();" />
+
 </body>
 
 
