--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -8,7 +8,10 @@
     <script type="text/javascript" src="scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">    
-    
+<body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">  
+    <header>
+        <H2> Menu de Testes </H2>
+    </header>  
+
 </body>
 </html>
