--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -10,7 +10,8 @@
 </head>
 <body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">  
     <header>
-        <H2> Menu de Testes </H2>
+        <img id="logo" alt="Lucky's Logo" src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\White_Logo.png">
+        <p id="title"> Menu de Testes </p>
     </header>  
 
 </body>
