--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -11,8 +11,12 @@
 <body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">  
     <header>
         <img id="logo" alt="Lucky's Logo" src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\White_Logo.png">
-        <p id="title"> Menu de Testes </p>
+        <p id="title", style="cursor:default" > Menu de Testes </p>
     </header>  
+
+    <div id="onclick">
+        <p class="titulo"> Onclick Event </p>
+    </div>
 
 </body>
 </html>
