--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,45 @@
     <script type="text/javascript" src="scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">  
+
+<body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">
     <header>
-        <img id="logo" alt="Lucky's Logo" src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\White_Logo.png">
-        <p id="title", style="cursor:default" > Menu de Testes </p>
-    </header>  
+        <img id="logo" alt="Lucky's Logo"
+            src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\White_Logo.png">
+        <p id="title" , style="cursor:default"> Menu de Testes </p>
+    </header>
 
     <div id="onclick">
-        <p class="titulo"> Onclick Event </p>
+        <h2 class="titulo"> Onclick Event </h2>
+        <table>
+            <th>
+                <img id="Button" alt="Click Buttom"
+                    src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\Click_Button.png" ,
+                    onclick="touchRock();"TITLE="Deixar Feliz">
+            </th>
+            <th>
+                <img id="irock" class="irock" alt="Irock imagem" style="cursor:default"
+                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
+            </th>
+            <th>
+                <img id="Button" class="irock" alt="Click Buttom"
+                    src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\Click_Button.png" ,
+                    onclick="touchRockreset();" TITLE="Reset">
+            </th>
+        </table>
+        <table>
+            <th>
+                <img id="Button" alt="Click Buttom"
+                    src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\Click_Button.png" ,
+                    onclick="touchRocksad();"TITLE="Deixar Triste">
+            </th>
+            <th>
+                <img id="irock2" class="irock" alt="Irock imagem" style="cursor:default"
+                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
+            </th>
+        </table>
     </div>
 
 </body>
+
 </html>
