Image link online

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -13,7 +13,7 @@
 <body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">
     <header>
         <img id="logo" alt="Lucky's Logo"
-            src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\White_Logo.png">
+            src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
         <p id="title" , style="cursor:default"> Menu de Testes </p>
     </header>
 
@@ -22,7 +22,7 @@
         <table>
             <th>
                 <img id="Button" alt="Click Buttom"
-                    src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\Click_Button.png" ,
+                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ,
                     onclick="touchRock();"TITLE="Deixar Feliz">
             </th>
             <th>
@@ -31,14 +31,14 @@
             </th>
             <th>
                 <img id="Button" class="irock" alt="Click Buttom"
-                    src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\Click_Button.png" ,
+                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ,
                     onclick="touchRockreset();" TITLE="Reset">
             </th>
         </table>
         <table>
             <th>
                 <img id="Button" alt="Click Buttom"
-                    src="C:\Users\User\Documents\Projetos\Dev-WEB\Teste_Events_JS\Image\Click_Button.png" ,
+                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ,
                     onclick="touchRocksad();"TITLE="Deixar Triste">
             </th>
             <th>
