--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -12,40 +12,32 @@
 
 <body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">
     <header>
-        <img id="logo" alt="Lucky's Logo"
-            src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
-        <p id="title" , style="cursor:default"> Menu de Testes </p>
+        <img id="logo" alt="Lucky's Logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
+        <p id="title" , style="cursor:default"> Menu de Testes
     </header>
 
-    <div id="onclick">
-        <h2 class="titulo"> Onclick Event </h2>
-        <table>
-            <th>
-                <img id="Button" alt="Click Buttom"
-                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ,
-                    onclick="touchRock();"TITLE="Deixar Feliz">
-            </th>
-            <th>
-                <img id="irock" class="irock" alt="Irock imagem" style="cursor:default"
-                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
-            </th>
-            <th>
-                <img id="Button" class="irock" alt="Click Buttom"
-                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ,
-                    onclick="touchRockreset();" TITLE="Reset">
-            </th>
-        </table>
-        <table>
-            <th>
-                <img id="Button" alt="Click Buttom"
-                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ,
-                    onclick="touchRocksad();"TITLE="Deixar Triste">
-            </th>
-            <th>
-                <img id="irock2" class="irock" alt="Irock imagem" style="cursor:default"
-                    src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
-            </th>
-        </table>
+
+    <div class="titulo">
+        <h2> Onclick Event </h2>
+    </div>
+    <div class="bloco" id="OnclickEvents">
+
+        <p id="Happy">
+            <img id="Button" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRock();" TITLE="Deixar Feliz">
+            <img id="irock" class="irock" alt="Irock imagem" style="cursor:default" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
+        </p>
+
+        <p id="Sad">
+            <img id="Button" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRocksad();" TITLE="Deixar Triste">
+            <img id="irock2" class="irock" alt="Irock imagem" style="cursor:default" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
+
+
+        </p>
+        <p id="Reset">
+            <img id="Button" class="irock" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRockreset();" TITLE="Reset">
+        </p>
+
+
     </div>
 
 </body>
