Creating return structure

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -46,7 +46,7 @@
                     <table>
                         <tr>
                             <td> Nome:</td>
-                            <td><input id="nome" class="InputText"></td>
+                            <td><input id="nome" class="InputText" value="Nome Completo"></td>
                         </tr>
                         <tr>
                             <td>Data de Nascimento:</td>
@@ -64,7 +64,12 @@
                             </form>
                         </tr>
                     </table>
+
                 </div>
+
+                <p class="titulo">
+                    <h2 style="text-align: center;"> Resultado: </h2>
+                </p>
             </div>
         </div>
 
