Creating function Age calculator

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -30,9 +30,11 @@
                 <img id="Button" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRocksad();" TITLE="Deixar Triste">
                 <img id="irock2" class="irock" alt="Irock imagem" style="cursor:default" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
             </p>
+
             <p id="Reset">
-                <img id="Button" class="irock" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRockreset();" TITLE="Reset">
+                <h3 style="padding-bottom: 0px;">Reset:</h3> <img id="Button" style="padding-top: 0px;" class="irock" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRockreset();" TITLE="Reset">
             </p>
+
         </div>
 
         <div class="content" id="Forms">
@@ -50,7 +52,7 @@
                         </tr>
                         <tr>
                             <td>Data de Nascimento:</td>
-                            <td><input type="date" class="InputText" id="nascimento:"></td>
+                            <td><input type="date" class="InputText" id="nascimento"></td>
                         </tr>
                         <tr>
                             <form>
@@ -64,11 +66,15 @@
                             </form>
                         </tr>
                     </table>
+                    <p id="send">
+                        <img id="Button" style="align-items: center; padding-left: 35%; width: 100px;" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ; "
+                            TITLE="Send ">
+                    </p>
 
                 </div>
 
-                <p class="titulo">
-                    <h2 style="text-align: center;"> Resultado: </h2>
+                <p class="titulo ">
+                    <h2 style="text-align: center; "> Resultado: </h2>
                 </p>
             </div>
         </div>
