Declarated ".value" in the getELement

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -48,11 +48,11 @@
                     <table>
                         <tr>
                             <td> Nome:</td>
-                            <td><input id="nome" class="InputText" value="Nome Completo"></td>
+                            <td><input id="nome" name="nome" class="InputText" value="Nome Completo"></td>
                         </tr>
                         <tr>
                             <td>Data de Nascimento:</td>
-                            <td><input type="date" class="InputText" id="nascimento"></td>
+                            <td><input type="date" class="InputText" id="date"></td>
                         </tr>
                         <tr>
                             <form>
@@ -68,7 +68,7 @@
                     </table>
                     <p id="send">
                         <img id="Button" style="align-items: center; padding-left: 35%; width: 100px;" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ; "
-                            TITLE="Send ">
+                            TITLE="Send ", onclick="ReturForm(); ">
                     </p>
 
                 </div>
