Creating IMC calculator

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -65,11 +65,15 @@
                                 </td>
                             </form>
                         </tr>
+                        <tr>
+                            <td>Altura em Cm:</td>
+                            <td><input type="number" class="InputText" id="UserHeight"></td>
+                        </tr>
+                        <tr>
+                            <td>Peso em Kg:</td>
+                            <td><input class="InputText" id="UserWeight"></td>
+                        </tr>
                     </table>
-                    <p id="send">
-                        <img id="Button" style="align-items: center; padding-left: 35%; width: 100px;" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ; "
-                            TITLE="Send ", onclick="ReturForm(); ">
-                    </p>
 
                 </div>
 
