--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -52,10 +52,10 @@
                         </tr>
                         <tr>
                             <td>Data de Nascimento:</td>
-                            <td><input type="date" class="InputText" id="date"></td>
+                            <td><input type="date" class="InputText" id="birth"></td>
                         </tr>
                         <tr>
-                            <form>
+                            <form class="sex">
                                 <td>Sexo: </td>
                                 <td>
                                     <input type="radio" name="sexo" Value="Masculino">
@@ -67,13 +67,17 @@
                         </tr>
                         <tr>
                             <td>Altura em Cm:</td>
-                            <td><input type="number" class="InputText" id="UserHeight"></td>
+                            <td><input type="number" class="InputText" id="height"></td>
                         </tr>
                         <tr>
                             <td>Peso em Kg:</td>
-                            <td><input class="InputText" id="UserWeight"></td>
+                            <td><input class="InputText" id="weight"></td>
                         </tr>
                     </table>
+                    <p id="send">
+                        <img id="Button" style="align-items: center; padding-left: 35%; width: 100px;" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ; "
+                            TITLE="Send ", onclick="ReturFormIMC(); ">
+                    </p>
 
                 </div>
 
