Created the "Calculadora de IMC"

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -41,7 +41,7 @@
             <div class="form">
 
                 <p class="titulo">
-                    <h2 style="text-align: center;"> Formulário </h2>
+                    <h2 style="text-align: center;"> Calculadora de IMC </h2>
                 </p>
 
                 <div class="Formulario">
@@ -76,13 +76,14 @@
                     </table>
                     <p id="send">
                         <img id="Button" style="align-items: center; padding-left: 35%; width: 100px;" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ; "
-                            TITLE="Send ", onclick="ReturFormIMC(); ">
+                            TITLE="Send ", onclick="ReturnFormIMC(); ">
                     </p>
 
                 </div>
 
-                <p class="titulo ">
-                    <h2 style="text-align: center; "> Resultado: </h2>
+                <p style="text-align: center ">
+                    Tabela IMC:<br><br>
+                    <img id="tabelaIMC " alt="Tabela IMC " src="Image/tabela-imc.png " width="350 " height="195 ">
                 </p>
             </div>
         </div>
