Link image updated

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -83,7 +83,7 @@
 
                 <p style="text-align: center ">
                     Tabela IMC:<br><br>
-                    <img id="tabelaIMC " alt="Tabela IMC " src="Image/tabela-imc.png " width="350 " height="195 ">
+                    <img id="tabelaIMC " alt="Tabela IMC " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/tabela-imc.png " width="350 " height="195 ">
                 </p>
             </div>
         </div>
