Insert Inner in code for show results

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -75,9 +75,12 @@
                         </tr>
                     </table>
                     <p id="send">
-                        <img id="Button" style="align-items: center; padding-left: 35%; width: 100px;" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ; "
+                        <img id="Button" style="align-items: center; padding-left: 35%; padding-bottom: 5px; width: 100px;" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" ; "
                             TITLE="Send ", onclick="ReturnFormIMC(); ">
+
                     </p>
+                    <H2 style="padding-top: 0px; ">RESULTADO:</H2>
+                    <p id="Resultado "> </p>
 
                 </div>
 
