--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -37,7 +37,7 @@
 
         </div>
 
-        <div class="content" id="Forms">
+        <div class="content" id="IMCCALC">
             <div class="form">
 
                 <p class="titulo">
