Include CSS in Results

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -80,7 +80,7 @@
 
                     </p>
                     <H2 style="padding-top: 0px; ">RESULTADO:</H2>
-                    <p id="Resultado"> </p>
+                    <p id="Resultado" style="text-align:center; font-size: large;"> </p>
 
                 </div>
 
