Update Error mesage

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -84,7 +84,7 @@
 
                 </div>
 
-                <p style="text-align: center ">
+                <p name="tabela" style="text-align: center ">
                     Tabela IMC:<br><br>
                     <img id="tabelaIMC " alt="Tabela IMC " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/tabela-imc.png " width="350 " height="195 ">
                 </p>
