--- a/Projeto_IRock/Index.html
+++ b/Projeto_IRock/Index.html
@@ -11,7 +11,7 @@
     </script>
 </head>
 
-<body onload="alert( 'Olá! Sou o Irock.');">
+<body onload="resizeRock();  alert( 'Olá! Sou o Irock.');">
     <img id="logo" alt="Lucky's Logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
 
     <header>
