Creating Cookies to save the userName

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body onload="alert('Bem-vindo ao meu Menu de Testes em Javascript!');">
+<body onload="Hello();">
     <header>
         <img id="logo" alt="Lucky's Logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
         <p id="title" , style="cursor:default"> Menu de Testes
@@ -48,7 +48,7 @@
                     <table>
                         <tr name="CampoNome">
                             <td> Nome:</td>
-                            <td><input id="nome" name="nome" class="InputText" ></td>
+                            <td><input id="nome" name="nome" class="InputText"></td>
                         </tr>
                         <tr name="DataDeNascimento">
                             <td>Data de Nascimento:</td>
@@ -80,11 +80,11 @@
 
                     </p>
                     <H2 style="padding-top: 0px; ">RESULTADO:</H2>
-                    <p id="Resultado" style="text-align:center; font-size: large;"> </p>
+                    <p id="Resultado " style="text-align:center; font-size: large; "> </p>
 
                 </div>
 
-                <p name="tabela" style="text-align: center ">
+                <p name="tabela " style="text-align: center ">
                     Tabela IMC:<br><br>
                     <img id="tabelaIMC " alt="Tabela IMC " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/tabela-imc.png " width="350 " height="195 ">
                 </p>
