--- a/Projeto_IRock/Index.html
+++ b/Projeto_IRock/Index.html
@@ -11,12 +11,12 @@
     </script>
 </head>
 
-<body onload="resizeRock();  alert( 'Olá! Sou o Irock.');">
+<body onload="Hello();resizeRock();" onresize="resizeRock();">
     <img id="logo" alt="Lucky's Logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
 
     <header>
 
-        <p>IRock - A pedra</p>
+        <p>iRock - A pedra</p>
     </header>
     <div id="main">
         <img id="iRock" alt="Irock imagem" style="cursor:pointer" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" , onclick="touchRock();" , />
