--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -48,7 +48,7 @@
                     <table>
                         <tr>
                             <td> Nome:</td>
-                            <td><input id="nome" name="nome" class="InputText" value="Nome Completo"></td>
+                            <td><input id="nome" name="nome" class="InputText"></td>
                         </tr>
                         <tr>
                             <td>Data de Nascimento:</td>
