Created the questions space

--- a/Decisions_If_Else/Index.html
+++ b/Decisions_If_Else/Index.html
@@ -22,12 +22,19 @@
     <div id="main">
         <img id="iRock" alt="Irock imagem" style="cursor:pointer" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" , onclick="touchRock();" , />
     </div>
+    <br>
+    <br>
+
     <div name="questoes" class="questoes">
-        <table>
-            <th id="pergunta"></th>
+        <table id="questionario">
+            <tr id="SessaoPergunta">
+                <td id="NumeroPergunta" style="opacity: 1000%;">Questão 1</td>
+                <td id="Pergunta">Pergunta 1</td>
+            </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>
+                    <img style="margin-left: 2cm; margin-right: 2cm;" " class="buttom " src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\botao_verde.png "> <br>Verdadeiro</td>
+                <td><img style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\botao_vermelho.png "><br> Falso</td>
             </tr>
         </table>
 
