--- a/Decisions_If_Else/Index.html
+++ b/Decisions_If_Else/Index.html
@@ -19,7 +19,7 @@
         <p>Quiz - iRock</p>
     </header>
     <div id="placar">
-        <h1 style="color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" id="ponto"></h1>    </div>
+        <h1 style="display:'none'; color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" id="ponto"> </h1>    </div>
 
     <div id="main">
         <p>
