--- a/iRock_Quiz/Index.html
+++ b/iRock_Quiz/Index.html
@@ -14,9 +14,9 @@
 <body onload="Hello();">
     <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/IMC_Calc/Image/White_Logo.png" ;>
 
-    <header>
+    <header style="background-image: url(https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/iRock_Quiz/Imagens/header.jpg);">
 
-        <p style="font-size: xx-large; font-weight: bolder;" ;>Quiz - iRock</p>
+        <p style="font-size: xx-large; font-weight: bolder; " ;>Quiz - iRock</p>
     </header>
 
     <div id="placar">
